--- a/fhir-ai-frontend/src/app/dashboard/components/regions-table/regions-table.component.css
+++ b/fhir-ai-frontend/src/app/dashboard/components/regions-table/regions-table.component.css
@@ -145,3 +145,7 @@
       display: flex;
       flex-direction: column;
     }
+
+:host ::ng-deep .ant-card-body {
+  padding-bottom: 0;
+}
